Update to lab5p2
fixed

--- a/Labs/lab5/l5p2.html
+++ b/Labs/lab5/l5p2.html
@@ -14,13 +14,16 @@
 	</head>
   <body id = "greenMargin">
 
-		<h1>this is my title</h1>
+		<h1>This is the title</h1>
     <div id="pinkBlock">
 		    <h2>This is my first nav</h2>
-        <h2 id ="orangeBlock">This is the first nav</h2>
     </div>
-    <p>This is content </p>
-		<footer>This is the footer</footer>
+    <div id ="orangeBlock">
+        <h2 >This is the first nav</h2>
+    </div>
+
+    <p><strong>This is the content</strong> </p>
+		<footer><strong>This is the footer</strong></footer>
 
 
 </body></html>
