--- a/Assignments/A2.html
+++ b/Assignments/A2.html
@@ -60,7 +60,7 @@
     <img id="helpfulAd" src="white_T.jpg" alt="t-shirt Ad"/>
 
     <div>
-      <h3 id="headerDef"> The Government Controls Birds?</h3>
+      <h3 id="headerDef"> The Government Control Bird?</h3>
     </div>
 
     <a name ="evidence"></a>
