--- a/Assignments/A2.html
+++ b/Assignments/A2.html
@@ -57,7 +57,7 @@
       </div>
     </div>
 <!--"advertisement"-->
-    <img id="helpfulAd" src="white_T.jpg" alt="t-shirt Ad"/>
+    <img id="helpfulAd" src="white_t.jpg" alt="t-shirt Ad"/>
 
     <div>
       <h3 id="headerDef"> The Government Control Bird?</h3>
