a2 fiddling and l7 stuff

--- a/Assignments/A2.html
+++ b/Assignments/A2.html
@@ -26,6 +26,7 @@
       </ul>
     </div>
 <!-- List Boxes-->
+	<div>
     <div class="liBox">
       <h2>Evidence For Birds Existing</h2>
       <ul>
@@ -56,6 +57,7 @@
         <p>This is totally something about birds</p>
       </div>
     </div>
+	</div>
 <!--"advertisement"-->
     <img id="helpfulAd" src="white_t.jpg" alt="t-shirt Ad"/>
 
