--- a/Labs/lab8/l8p2.html
+++ b/Labs/lab8/l8p2.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Advanced Example</title>
+	<title>Exercise 2</title>
 
 	<script type="text/javascript" src="l8_scripts.js"></script>
 
