--- a/Assignments/Assignment3/A3.html
+++ b/Assignments/Assignment3/A3.html
@@ -17,28 +17,46 @@
 		<div id ="wrapper">
 			<div id="trueHeader">
 				<!-- img here - -->
-				<img id="logo" src="bird.jpg" alt="Logo"/>
-				<h1>This is a header test</h1>
-				<h2> this is a h2 test</h2>
+				<img id="logo" src="map.jpg" alt="Logo"/>
+				<h1>Irish Wrecks</h1>
+				<h2>Tagline</h2>
 			</div>
-			<!-- Navigation bar and list -->
-			<div id="navBar">
-				<ul>
-					<li>this</li>
-					<li>this</li>
-					<li>this</li>
-					<li>this</li>
-					<li>this</li>
-				</ul>
-			</div>
+			<!-- Navigation bar and list/search bar -->
+				<div id="navBar">
+					<ul>
+						<li id="search">Search Bar</li>
+						<li>Navigation Bar Item</li>
+						<li>Navigation Bar Item</li>
+						<li>Navigation Bar Item</li>
+						<li>Navigation Bar Item</li>
+						<li>Navigation Bar Item</li>
+						<li>Navigation Bar Item</li>
+						<li>Navigation Bar Item</li>
+					</ul>
+				</div>
 			<!--Content here-->
 			<div id="content">
 					<!--Map with border or something, I don't know. some CSS nonsense-->
-					<img id="mapImg" src="bird.jpg" alt="Logo"/>
+					<div class="news">
+
+						<h3>News</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Vestibulum non magna ut dui euismod sagittis. Morbi tortor leo, dictum sit amet
+							sagittis sed, hendrerit sed lorem. Aliquam porttitor, magna sit amet faucibus
+							fringilla, est velit scelerisque tellus, in porta tortor sem vel arcu. Donec ex dolor,
+							placerat nec elementum lacinia, porttitor a massa. Nam non dui iaculis, venenatis massa ut,
+						 convallis diam. Sed vulputate diam dolor, nec luctus turpis commodo vel. Ut ut lorem eu quam
+						  porttitor eleifend non ac urna. Cras pellentesque suscipit quam quis sodales.
+							 Nam ultricies lobortis tortor a semper. Sed consectetur ex odio, ut sodales
+							  sapien hendrerit ut. Curabitur odio magna, tempor eget tempus sit amet, ultrices nec est.</p>
+					</div>
+					<img id="mapImg" src="map.jpg" alt="Interactive map"/>
 			</div>
 			<!--footer and socials-->
-			<div id="footer">
-				<p> this is a footer test</p>
+			<div class="footer">
+				<p>Footer information</p>
+				<p id="socials">Socials</p>
 			</div>
+
 		</div>
 </body></html>
