--- a/Assignments/Assignment4/portfolio_website2.html
+++ b/Assignments/Assignment4/portfolio_website2.html
@@ -22,7 +22,7 @@
       <h2>Sequential Artist</h2>
     </div>
     <div class = "header">
-      <img src="images/header.jpg" alt="headerBG"/>
+      <img src="Images/header.jpg" alt="headerBG"/>
     </div>
 
     <div class = "navbar">
@@ -39,16 +39,16 @@
     <div class = "content">
       <p> this is content probably</p>
       <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="images/previewIMG.jpg" alt = "Placeholder Link"/>
+        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
       </a>
       <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="images/previewIMG.jpg" alt = "Placeholder Link"/>
+        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
       </a>
       <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="images/previewIMG.jpg" alt = "Placeholder Link"/>
+        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
       </a>
       <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="images/previewIMG.jpg" alt = "Placeholder Link"/>
+        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
       </a>
     </div>
 
