--- a/Assignments/Assignment4/portfolio_website2.html
+++ b/Assignments/Assignment4/portfolio_website2.html
@@ -22,37 +22,44 @@
       <h2>Sequential Artist</h2>
     </div>
     <div class = "header">
-      <img src="Images/header.jpg" alt="headerBG"/>
+      <img id = "headIMG" src="Images/header.jpg" alt="headerBG"/>
     </div>
 
     <div class = "navbar">
       <div id = "navBar">
         <ul>
-          <li><a href="pwAbout.html">About</a></li>
           <li><a href="pwContact.html">Contact</a></li>
           <li><a href="pwPricing.html">Pricing</a></li>
-          <li><a href="pwSeq.html">Sequential Artwork</a></li>
-          <li><a href="pwCDes.html">Character Design</a></li>
+          <li><a href="pwSeq.html">Artwork</a></li>
         </ul>
       </div>
     </div>
     <div class = "content">
-      <p> this is content probably</p>
+      <p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
+			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
+			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
+			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
+			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
+			<h3> Current and Past Personal Projects</h3>
       <a href="https://tapas.io/episode/1647404">
         <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
       </a>
-      <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
-      </a>
-      <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
-      </a>
-      <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
+      <a href="https://tapas.io/series/dreamward">
+        <img class = "previewIMG" src="Images/DW_title.jpg" alt = "Placeholder Link"/>
       </a>
     </div>
-
-
+		<div class = "footer">
+			<p id = "footerText"> Designed By Shannon Kelly(2020) for IASC 1P02, Brock University</p>
+				<a href="https://twitter.com/Shkelliton">
+					<img id = "twitterSize" src="Images/Socials/Twitter_Logo.png" alt = "Placeholder Link"/>
+				</a>
+				<a href="https://www.instagram.com/shkelliart/?hl=en">
+					<img id = "socials" src="Images/Socials/Instagram_Logo.png" alt = "Placeholder Link"/>
+				</a>
+				<a href="https://www.facebook.com/shannonkellyartwork">
+					<img id = "socials" src="Images/Socials/Facebook_Logo.png" alt = "Placeholder Link"/>
+				</a>
+		</div>
   <!-- Wrapper close -->
   </div>
 
