--- a/Assignments/Assignment4/portfolio_website2.html
+++ b/Assignments/Assignment4/portfolio_website2.html
@@ -6,10 +6,10 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Artwork and Design - Shannon Kelly</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet"/>
 	<link href="pw_style2.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="pw_scripts.js"></script>
 </head>
@@ -28,36 +28,40 @@
     <div class = "navbar">
       <div id = "navBar">
         <ul>
-          <li><a href="pwContact.html">Contact</a></li>
+          <!--<li><a href="pwContact.html">Contact</a></li>-->
           <li><a href="pwPricing.html">Pricing</a></li>
           <li><a href="pwSeq.html">Artwork</a></li>
         </ul>
       </div>
     </div>
     <div class = "content">
-      <p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
-			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
-			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
-			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
-			<p> this is content probablyEtiam volutpat, orci ut convallis ultricies, ligula quam efficitur nisi, ut vestibulum eros erat eu ligula. Quisque condimentum velit sit amet hendrerit posuere. Donec libero eros, aliquet id ante vel, sollicitudin viverra lacus. Praesent nec mattis nibh. Maecenas dictum augue mauris, sit amet tristique velit luctus id. Sed eu aliquet odio. Sed ultricies facilisis finibus. Praesent eu interdum odio. Sed facilisis erat ac risus dictum, eu blandit ligula maximus.</p>
+			  <button onclick="stopTime()">SHOW TIME</button>
+      <p> Hey there! I am a freelance illustrator who works primarily on graphic novels, comics, and general character design. Here is a blurb that I picked from an article ages ago because I can’t think of 500 words. Enjoy! </p>
+			<p><em>''“Witch Fever” begins, as every good legend does, with an origin. We have no names, only archetypes and relations, personifications and allusions, metaphor and majesty. The mythic nature of this opening sets an almost storybook tone and, for the most part, it’s quite effective. Shkelliton keeps the pages open, with large panels to convey the scale of the moments and the intensity of the emotions. The color work is vibrant and I particularly love the way they render the tears on page 7, both in the first and last panels. They glisten like jewels and then like wings.
+
+The problem is, much like the first issue of a print comic failing to portray its solicit text, we’re too early into the process to really judge the comic beyond the surface level traits. In these pages, Shkelliton is beginning to set the stage for, it seems, a grand adventure but if the description along the side is to be believed, we’re in store for a very different kind of story. That’s not a bad thing! What it is, is the tension between the story and the format.
+
+As we’ve noted many times in The Webcomics Weekly, webcomic release schedules can harm the flow of a comic greatly, as the limits of page by page are far greater than issue by issue or book by book. It makes it so that, especially early on in the process, if you’re not on board right away, you may fall off before things gain momentum. As it stands, “Witch Fever” has my attention. The art is dynamic and angular, sweeping through events and processing them swiftly but effectively. While there are moments of weirdness — sudden style changes where in one panel the faces are heavily shaded while in the next it’s got flat coloring, like an ancient carving vs a Baroque painting — it isn’t enough to break the story or dissuade a reader.
+
+It’s a learning process, as Shkelliton notes in their author’s notes, and while I may revise my opinion in either direction after 100 pages, the risks are paying off, even if they don’t all land with a twinkle and a soft click.' </em>-Elias Rosner</p>
 			<h3> Current and Past Personal Projects</h3>
       <a href="https://tapas.io/episode/1647404">
-        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Placeholder Link"/>
+        <img class = "previewIMG" src="Images/previewIMG.jpg" alt = "Witch Fever Link"/>
       </a>
       <a href="https://tapas.io/series/dreamward">
-        <img class = "previewIMG" src="Images/DW_title.jpg" alt = "Placeholder Link"/>
+        <img class = "previewIMG" src="Images/DW_title.jpg" alt = "Dream Ward Link"/>
       </a>
     </div>
 		<div class = "footer">
 			<p id = "footerText"> Designed By Shannon Kelly(2020) for IASC 1P02, Brock University</p>
 				<a href="https://twitter.com/Shkelliton">
-					<img id = "twitterSize" src="Images/Socials/Twitter_Logo.png" alt = "Placeholder Link"/>
+					<img id = "twitterSize" src="Images/Socials/Twitter_Logo.png" alt = "Twitter_logo"/>
 				</a>
 				<a href="https://www.instagram.com/shkelliart/?hl=en">
-					<img id = "socials" src="Images/Socials/Instagram_Logo.png" alt = "Placeholder Link"/>
+					<img class = "socials" src="Images/Socials/Instagram_Logo.png" alt = "Instagram_Logo"/>
 				</a>
 				<a href="https://www.facebook.com/shannonkellyartwork">
-					<img id = "socials" src="Images/Socials/Facebook_Logo.png" alt = "Placeholder Link"/>
+					<img class = "socials" src="Images/Socials/Facebook_Logo.png" alt = "Facebook_Logo"/>
 				</a>
 		</div>
   <!-- Wrapper close -->
