--- a/Assignments/Assignment4/pwContact.html
+++ b/Assignments/Assignment4/pwContact.html
@@ -6,10 +6,10 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Artwork and Design - Shannon Kelly</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet"/>
 	<link href="pw_style2.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="pw_scripts.js"></script>
 </head>
@@ -22,7 +22,7 @@
       <h2>Sequential Artist</h2>
     </div>
     <div class = "header">
-      <img src="Images/header.jpg" alt="headerBG"/>
+      <img id ="headIMG" src="Images/header.jpg" alt="headerBG"/>
     </div>
 
     <div class = "navbar">
@@ -36,9 +36,21 @@
       </div>
     </div>
     <div class = "content">
-      <p> this is content probably</p>
+      <p> Refer </p>
+			<p id="output"></p>
     </div>
-
+		<div class = "footer">
+			<p id = "footerText"> Designed By Shannon Kelly(2020) for IASC 1P02, Brock University</p>
+				<a href="https://twitter.com/Shkelliton">
+					<img id = "twitterSize" src="Images/Socials/Twitter_Logo.png" alt = "Twitter_logo"/>
+				</a>
+				<a href="https://www.instagram.com/shkelliart/?hl=en">
+					<img class = "socials" src="Images/Socials/Instagram_Logo.png" alt = "Instagram_Logo"/>
+				</a>
+				<a href="https://www.facebook.com/shannonkellyartwork">
+					<img class = "socials" src="Images/Socials/Facebook_Logo.png" alt = "Facebook_Logo"/>
+				</a>
+		</div>
 
   <!-- Wrapper close -->
   </div>
