--- a/Assignments/Assignment4/pwSeq.html
+++ b/Assignments/Assignment4/pwSeq.html
@@ -6,10 +6,10 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Artwork and Design - Shannon Kelly</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet"/>
 	<link href="pw_style2.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="pw_scripts.js"></script>
 </head>
@@ -21,23 +21,53 @@
       <h1>Shannon Kelly</h1>
       <h2>Sequential Artist</h2>
     </div>
-    <div class = "header">
-      <img src="Images/header.jpg" alt="headerBG"/>
+		<div class = "header">
+      <img id ="headIMG" src="Images/header.jpg" alt="headerBG"/>
     </div>
 
     <div class = "navbar">
       <div id = "navBar">
 				<ul>
-          <li><a href="pwContact.html">Contact</a></li>
+          <!--<li><a href="pwContact.html">Contact</a></li>-->
 					<li><a href="portfolio_website2.html">Home</a></li>
           <li><a href="pwPricing.html">Pricing</a></li>
         </ul>
       </div>
     </div>
     <div class = "content">
-      <p> this is content probably</p>
-    </div>
+      <h3> Recent Artwork</h3>
+				<div class = "galDiv">
+					<img class = "galleryIMG" src="Images/header.jpg" alt="headerBG" onclick="doZoom(this);"/>
+				</div>
+				<div class = "galDiv">
+					<img class = "galleryIMG" src="Images\mob_header1.jpg" alt="galIMG2 panels" onclick="doZoom(this);"/>
+				</div>
+				<div class = "galDiv">
+					<img class = "galleryIMG" src="Images\Rivka ref.jpg" alt="galIMG3 character" onclick="doZoom(this);"/>
+				</div>
+				<div class = "galDiv">
+					<img class = "galleryIMG" src="Images\Fanart\edelxplay.jpg" alt="galIMG4 scene" onclick="doZoom(this);"/>
+				</div>
+				<div class = "galDiv">
+					<img class = "galleryIMG" src="Images\Silver wolf.jpg" alt="galIMG5 character" onclick="doZoom(this);"/>
+				</div>
+			<div class="showcase">
+				<img id="bigIMG" src = "" style="width:100%" alt=""/>
+			</div>
+		</div>
 
+		<div class = "footer">
+			<p id = "footerText"> Designed By Shannon Kelly(2020) for IASC 1P02, Brock University</p>
+				<a href="https://twitter.com/Shkelliton">
+					<img class = "twitterSize" src="Images/Socials/Twitter_Logo.png" alt = "Twitter_logo"/>
+				</a>
+				<a href="https://www.instagram.com/shkelliart/?hl=en">
+					<img class = "socials" src="Images/Socials/Instagram_Logo.png" alt = "Instagram_Logo"/>
+				</a>
+				<a href="https://www.facebook.com/shannonkellyartwork">
+					<img class = "socials" src="Images/Socials/Facebook_Logo.png" alt = "Facebook_Logo"/>
+				</a>
+		</div>
 
   <!-- Wrapper close -->
   </div>
